--- a/menan/templates/services.html
+++ b/menan/templates/services.html
@@ -16,16 +16,37 @@
       </div>
     </section>
 		
-		<section class="ftco-section">
+	<section class="ftco-section">
       <div class="container">
-      	<div class="row justify-content-center mb-5 pb-5">
+      	{% comment %} <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
             <h2 class="mb-2">Our Service Keeps you Smile</h2>
             <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
           </div>
-        </div>
+        </div> {% endcomment %}
+		<div class="row justify-content-center mb-5 pb-5">
+			{% for smile in smiles%}
+			<div class="col-md-7 text-center heading-section ftco-animate">
+			  <h2 class="mb-2">{{smile.title}}</h2>
+			  <p>{{smile.desc}}</p>
+			</div>
+			{%endfor%}
+		</div>
         <div class="row">
-          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
+			{% for sevr in servs %}
+			<div class="col-md-3 d-flex align-self-stretch ftco-animate">
+				<div class="media block-6 services d-block text-center">
+				  <div class="icon d-flex justify-content-center align-items-center">
+						<span class="{{ sevr.icon }}"></span>
+				  </div>
+				  <div class="media-body p-2 mt-3">
+					<h3 class="heading">{{serv.name}}</h3>
+					<p>{{serv.desc}}</p>
+				  </div>
+				</div>      
+			</div>
+			{% endfor %}
+          {% comment %} <div class="col-md-3 d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services d-block text-center">
               <div class="icon d-flex justify-content-center align-items-center">
             		<span class="flaticon-tooth"></span>
@@ -35,8 +56,8 @@
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
               </div>
             </div>      
-          </div>
-          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
+          </div> {% endcomment %}
+          {% comment %} <div class="col-md-3 d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services d-block text-center">
               <div class="icon d-flex justify-content-center align-items-center">
             		<span class="flaticon-dental-care"></span>
@@ -80,8 +101,8 @@
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
               </div>
             </div>      
-          </div>
-          <div class="col-md-3 d-flex align-self-stretch ftco-animate">
+          </div> {% endcomment %}
+          {% comment %} <div class="col-md-3 d-flex align-self-stretch ftco-animate">
             <div class="media block-6 services d-block text-center">
               <div class="icon d-flex justify-content-center align-items-center">
             		<span class="flaticon-bacteria"></span>
@@ -112,7 +133,7 @@
                 <h3 class="heading">Tooth Braces</h3>
                 <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
               </div>
-            </div>      
+            </div>       {% endcomment %}
           </div>
         </div>
       </div>
