--- a/menan/templates/index.html
+++ b/menan/templates/index.html
@@ -226,7 +226,9 @@
           {% for dent in dents%}
         	<div class="col-lg-3 col-md-6 d-flex mb-sm-4 ftco-animate">
         		<div class="staff">
-      				<div class="img mb-4" style="background-image: url({{dent.img.url}});"></div>
+      				<div class="img mb-4" style="background-image: url({{dent.image.url}});">
+						<p>{{dent.image.url}}</p>
+					</div>
       				<div class="info text-center">
       					<h3><a href="teacher-single.html">{{dent.name}}</a></h3>
       					<span class="position">{{dent.prof}}</span>
