--- a/menan/templates/contact.html
+++ b/menan/templates/contact.html
@@ -9,7 +9,7 @@
       <div class="container" data-scrollax-parent="true">
         <div class="row slider-text align-items-end">
           <div class="col-md-7 col-sm-12 ftco-animate mb-5">
-            <p class="breadcrumbs" data-scrollax=" properties: { translateY: '70%', opacity: 1.6}"><span class="mr-2"><a href="{% url 'home' %}">Home</a></span> <span>Blog</span></p>
+            <p class="breadcrumbs" data-scrollax=" properties: { translateY: '70%', opacity: 1.6}"><span class="mr-2"><a href="{% url 'home' %}">Home</a></span> <span>Contact</span></p>
             <h1 class="mb-3" data-scrollax=" properties: { translateY: '70%', opacity: .9}">Contact Us</h1>
           </div>
         </div>
@@ -63,9 +63,18 @@
         
         </div>
 
-        <div class="col-md-6" id="map"></div>
+        <div class="contact-img">
+          <iframe 
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3940.1637489996847!2d38.7352157744991!3d9.015102388679371!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x164b85df461a3f2d%3A0x6637f10e1ad21e01!2zU29saWFuYSBDb21tZXJjaWFsIENlbnRlciB8IExpZGV0YSB8IOGItuGIiuGKkyDhi6jhipXhjI3hi7Ug4Yib4YuV4Yqo4YiNIHwg4YiN4Yuw4Ymz!5e0!3m2!1sen!2set!4v1705013746232!5m2!1sen!2set" 
+              height="450" 
+              style="border:0; width:100%;" 
+              allowfullscreen="" 
+              loading="lazy" 
+              referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
       </div>
+      
     </div>
   </section>
 {% endblock %}
-   
+  
