--- a/menan/templates/about.html
+++ b/menan/templates/about.html
@@ -96,7 +96,7 @@
       						<span class="icon-check2"></span>
       					</div>
       					<div class="text">
-	      					<h3>High Technology Facilities {{person.heading22}} </h3>
+	      					<h3>{{person.heading22}} </h3>
 	      					<p>{{person.heading22_desc}} </p>
       					</div>
       				</div>
@@ -112,144 +112,94 @@
       			</div>
       		</div>
       	</div>
-		{%endfor%}
+		{%endfor%} 
       </div>
     </section>
 
     <section class="ftco-section testimony-section bg-light">
-      <div class="container">
-        <div class="row justify-content-center mb-5 pb-3">
-          <div class="col-md-7 text-center heading-section ftco-animate">
-            <h2 class="mb-2">Testimony</h2>
-            <span class="subheading">Our Happy Customer Says</span>
-          </div>
-        </div>
-        <div class="row justify-content-center ftco-animate">
-          <div class="col-md-8">
-            <div class="carousel-testimony owl-carousel ftco-owl">
-              <div class="item">
-                <div class="testimony-wrap p-4 pb-5">
-                  <div class="user-img mb-5" style="background-image: url({% static 'menanapp/images/person_1.jpg' %})">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text text-center">
-                    <p class="mb-5">Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-                    <p class="name">Dennis Green</p>
-                    <span class="position">Marketing Manager</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap p-4 pb-5">
-                  <div class="user-img mb-5" style="background-image: url({% static 'menanapp/images/person_2.jpg' %})">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text text-center">
-                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Dennis Green</p>
-                    <span class="position">Interface Designer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap p-4 pb-5">
-                  <div class="user-img mb-5" style="background-image: url({% static 'menanapp/images/person_3.jpg' %})">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text text-center">
-                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Dennis Green</p>
-                    <span class="position">UI Designer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap p-4 pb-5">
-                  <div class="user-img mb-5" style="background-image: url({% static 'menanapp/images/person_1.jpg' %})">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text text-center">
-                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Dennis Green</p>
-                    <span class="position">Web Developer</span>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="testimony-wrap p-4 pb-5">
-                  <div class="user-img mb-5" style="background-image: url({% static 'menanapp/images/person_1.jpg' %})">
-                    <span class="quote d-flex align-items-center justify-content-center">
-                      <i class="icon-quote-left"></i>
-                    </span>
-                  </div>
-                  <div class="text text-center">
-                    <p class="mb-5">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                    <p class="name">Dennis Green</p>
-                    <span class="position">System Analytics</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+		<div class="container">
+			<div class="row justify-content-center mb-5 pb-3">
+				<div class="col-md-7 text-center heading-section ftco-animate">
+					<h2 class="mb-2">Testimony</h2>
+					<span class="subheading">Our Happy Customer Says</span>
+				</div>
+			</div>
+			<div class="row justify-content-center ftco-animate">
+				<div class="col-md-8">
+					<div class="carousel-testimony owl-carousel ftco-owl">
+						{% for test in tests%}
+						<div class="item">
+							<div class="testimony-wrap p-4 pb-5"> 
+								<div class="user-img mb-5" style="background-image: url({{test.image.url}})">
+									<span class="quote d-flex align-items-center justify-content-center">
+									<i class="icon-quote-left"></i>
+									</span>
+								</div>
+								<div class="text text-center">
+									<p class="mb-5">{{test.desc}}</p>
+									<p class="name">{{test.name}}</p>
+									<span class="position">{{test.prof}}</span>
+								</div>
+							</div>
+						</div>
+						{%endfor%} 
+					</div>
+				</div>
+			</div>
+		</div>
     </section>
 
-    <section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url({% static 'menanapp/images/bg_1.jpg' %});" data-stellar-background-ratio="0.5">
+    {% for slider in sliders%}
+    <section class="ftco-section ftco-counter img" id="section-counter" style="background-image: url({{slider.image.url}});" data-stellar-background-ratio="0.5">
     	<div class="container">
+			{% for achiv in achievs %}
     		<div class="row d-flex align-items-center">
     			<div class="col-md-3 aside-stretch py-5">
     				<div class=" heading-section heading-section-white ftco-animate pr-md-4">
-	            <h2 class="mb-3">Achievements</h2>
-	            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-	          </div>
+						<h2 class="mb-3">{{achiv.title}}</h2>
+						<p>{{achiv.desc}} </p>
+	          		</div> 
     			</div>
     			<div class="col-md-9 py-5 pl-md-5">
 		    		<div class="row">
 		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18">
 		              <div class="text">
-		                <strong class="number" data-number="14">0</strong>
-		                <span>Years of Experience</span>
+		                <strong class="number" data-number={{achiv.year_of_exp}}>0</strong>
+		                <span>{{achiv.year_of_exp_txt}}</span>
 		              </div>
 		            </div>
 		          </div>
 		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18">
 		              <div class="text">
-		                <strong class="number" data-number="4500">0</strong>
-		                <span>Qualified Dentist</span>
+		                <strong class="number" data-number={{achiv.qua_dent}}>0</strong>
+		                <span>{{achiv.qua_dent_txt}}</span>
 		              </div>
 		            </div>
 		          </div>
 		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18">
 		              <div class="text">
-		                <strong class="number" data-number="4200">0</strong>
-		                <span>Happy Smiling Customer</span>
+		                <strong class="number" data-number={{achiv.customer}}>0</strong>
+		                <span>{{achiv.customer_txt}}</span>
 		              </div>
 		            </div>
 		          </div>
 		          <div class="col-md-3 d-flex justify-content-center counter-wrap ftco-animate">
 		            <div class="block-18">
 		              <div class="text">
-		                <strong class="number" data-number="320">0</strong>
-		                <span>Patients Per Year</span>
+		                <strong class="number" data-number={{achiv.ppy}}>0</strong>
+		                <span>{{achiv.ppy_txt}} </span>
 		              </div>
 		            </div>
 		          </div>
 		        </div>
 		      </div>
 	      </div>
+		  {%endfor%}
     	</div>
     </section>
+	{%endfor%}
 
 {%endblock%}
