--- a/menan/templates/base.html
+++ b/menan/templates/base.html
@@ -46,19 +46,19 @@
                     <li class="nav-item"><a href="{% url 'doctor:doctors' %}" class="nav-link">Doctors</a></li>
                     <li class="nav-item"><a href="{% url 'blog:blog' %}" class="nav-link">Blog</a></li>
                     <li class="nav-item"><a href="{% url 'contact' %}" class="nav-link">Contact</a></li>
-                    <li class="nav-item cta"><a href="{% url 'contact' %}" class="nav-link" data-toggle="modal" data-target="#modalRequest"><span>Make an Appointment</span></a></li>
+                    <li class="nav-item cta"><a href="{% url 'contact' %}" class="nav-link mr-5" data-toggle="modal" data-target="#modalRequest"><span>Make an Appointment</span></a></li>
                     {% if user.is_authenticated %}
                         {% if user.is_superuser %}
-                            <li class="nav-item cta"><a href="{% url 'admin:index' %}" class="nav-link"><span>Admin</span></a></li>
+                            <li class="nav-item cta ml-5"><a href="{% url 'admin:index' %}" class="nav-link"><span>Admin</span></a></li>
                         {% endif %}
-                        <li class="nav-item cta"><a href="{% url 'logout' %}" class="nav-link"><span>Logout</span></a></li>
+                        <li class="nav-item cta ml-3"><a href="{% url 'logout' %}" class="nav-link"><span>Logout</span></a></li>
                     {% else %}
-                        <li class="nav-item cta"><a href="{% url 'login' %}" class="nav-link"><span>Login</span></a></li>
+                        <li class="nav-item cta ml-5"><a href="{% url 'login' %}" class="nav-link"><span>Login</span></a></li>
                     {% endif %}
                 </ul>
             </div>
             </div>
-        </nav>
+        </nav>  
     <!-- END nav -->
         {% block content %}
         {% endblock %}
@@ -96,11 +96,11 @@
                     <div class="block-21 mb-4 d-flex">
                         <a class="blog-img mr-4" style="background-image: url({{blg.image.url}});"></a>
                         <div class="text">
-                            <h3 class="heading"><a href="#">{{blg.title}}</a></h3>
+                            <h3 class="heading"><a href={% url 'blog:blog' %}>{{blg.title}}</a></h3>
                             <div class="meta">
-                            <div><a href="#"><span class="icon-calendar"></span>{{blg.created_at}}</a></div>
-                            <div><a href="#"><span class="icon-person"></span> {{blg.author}}</a></div>
-                            <div><a href="#"><span class="icon-chat"></span> {{blg.comments_count}}</a></div>
+                            <div><a href={% url 'blog:blog' %}><span class="icon-calendar"></span>{{blg.created_at}}</a></div>
+                            <div><a href={% url 'blog:blog' %}><span class="icon-person"></span> {{blg.author}}</a></div>
+                            <div><a href={% url 'blog:blog' %}><span class="icon-chat"></span> {{blg.comments_count}}</a></div>
                             </div>
                         </div>
                     </div>
@@ -162,9 +162,19 @@
                 <div class="form-group">
                     <input type="text" name="phone" class="form-control" id="phone" placeholder="Phone" required>
                 </div>
-                <div class="form-group">
-                    <!-- <label for="appointment_name" class="text-black">Department</label> -->
-                    <input type="text" class="form-control" name="department" id="department" placeholder="Department" required>
+                <div class="col-sm-4">
+                    <div class="form-group">
+                        <div class="select-wrap">
+                            <div class="icon"><span class="ion-ios-arrow-down"></span></div>
+                            <select name="department" id="department" class="form-control" required>
+                                <option value="">Department</option>
+                                <option value="Teeth Whitening">Teeth Whitening</option>
+                                <option value="Teeth Cleaning">Teeth Cleaning</option>
+                                <option value="Quality Brackets">Quality Brackets</option>
+                                <option value="Modern Anesthetic">Modern Anesthetic</option>
+                            </select>
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-6">
                     <div class="form-group">
