--- a/menan/templates/doctors.html
+++ b/menan/templates/doctors.html
@@ -17,7 +17,7 @@
 	  {%endfor%}
     </section>
 		
-		<section class="ftco-section">
+	<section class="ftco-section">
       <div class="container">
 		<div class="row justify-content-center mb-5 pb-5">
 			{% for doct in docTitle%}
@@ -129,7 +129,7 @@
 							<li>{{price.opt4}}</li>
 							<li>{{price.opt5}}</li>
         				</ul>
-        				<p class="button text-center"><a href="#" class="btn btn-primary btn-outline-primary px-4 py-3">Order now</a></p>
+        				<p class="button text-center"><a href="#" class="btn btn-primary btn-outline-primary px-4 py-3" data-toggle="modal" data-target="#modalRequest">Order now</a></p>
         			</div>
 				</div>
 				{%endfor%}
